--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
     <div id="main">
         <div class="fof">
-            <h1>Error 404</h1>
+            <h1>Error</h1>
+            <p>Dienas, dienas, dienas...<p>
         </div>
     </div>
 </body>
