--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div class="fof">
             <h1>Error</h1>
             <p>Dienas, dienas, dienas...<p>
+            <img src="https://fv9-6.failiem.lv/down.php?i=wp65vcdk7&view" alt="3 dienas">
         </div>
     </div>
 </body>
