--- a/index.html
+++ b/index.html
@@ -6,14 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MeteoLatvia</title>
+    <style>
+        .launch-teaser {
+            max-width: 100%;
+            height: auto;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            width: 75%;
+        }
+    </style>
 </head>
 
 <body>
     <div id="main">
         <div class="fof">
             <h1>Error</h1>
-            <p>Dienas, dienas, dienas...<p>
-            <img src="https://fv9-6.failiem.lv/down.php?i=wp65vcdk7&view" alt="3 dienas">
+            <p>Dienas, dienas, dienas...
+            <p>
+                <img src="https://fv9-6.failiem.lv/down.php?i=wp65vcdk7&view" class="launch-teaser">
         </div>
     </div>
 </body>
