--- a/MeteoSalidzinajums.html
+++ b/MeteoSalidzinajums.html
@@ -22,7 +22,8 @@
                 <ul>
                     <li><a href="index.html">MĀJAS</a></li>
                     <li><a href="MeteoPar.html">PAR</a></li>
-                    <li><a href="MeteoNoverojumuKarte_temperatura.html">KARTE</a></li>
+                    <li><a href="MeteoNoverojumuKarte_temperatura.html">NOVĒROJUMU KARTE</a></li>
+                    <li><a href="MeteoSatelits_HRV.html">SATELĪTKARTE</a></li>
                     <li><a href="MeteoSalidzinajums.html">SALĪDZINĀJUMI</a></li>
                 </ul>
             </div>
