--- a/MeteoSatelits_NaturalColor.html
+++ b/MeteoSatelits_NaturalColor.html
@@ -22,7 +22,8 @@
         <ul>
           <li><a href="index.html">MĀJAS</a></li>
           <li><a href="MeteoPar.html">PAR</a></li>
-          <li><a href="MeteoNoverojumuKarte_temperatura.html">KARTE</a></li>
+          <li><a href="MeteoNoverojumuKarte_temperatura.html">NOVĒROJUMU KARTE</a></li>
+          <li><a href="MeteoSatelits_HRV.html">SATELĪTKARTE</a></li>
           <li><a href="MeteoSalidzinajums.html">SALĪDZINĀJUMI</a></li>
         </ul>
       </div>
@@ -42,17 +43,15 @@
       <li><a href="MeteoSatelits_Dust.html">Dust</a></li>
       <li><a href="MeteoSatelits_FogCheck.html">Low clouds / fog</a></li>
     </ul>
-    <embed type="text/html" src="EUMETSAT\EUMETSAT_NaturalColor.html" class="LVGMC_karte">
+    <embed type="text/html" src="EUMETSAT\EUMETSAT_NaturalColor.html?timestamp=<%= new Date().getTime() %>"
+      class="LVGMC_karte">
   </section>
 
 
 
   <section class="footer">
     <h4>Par mani</h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-      sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br>
-      Ut enim ad minim veniam,
-      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <p></p>
     <div class="icons">
       <a href="https://twitter.com/MeteoLatvia">
         <i class="fa fa-twitter"></i>
