--- a/index.html
+++ b/index.html
@@ -2,67 +2,199 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MeteoLatvia</title>
-    <style>
-        .launch-teaser {
-            max-width: 100%;
-            height: auto;
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-            width: 75%;
-        }
-
-        #demo {
-            text-align: center;
-            /* Center the text */
-            margin-top: 20px;
-            /* Add some top margin for spacing */
-            font-size: 24px;
-            /* Adjust the font size as needed */
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>MeteoLatvia</title>
+  <link rel="stylesheet" href="MeteoStyle.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/d13555ebbc.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <div id="main">
-        <div class="fof">
-            <h1>Error</h1>
-            <p>Dienas, dienas, dienas...
-            <p>
-                <img src="https://fv9-3.failiem.lv/down.php?i=w3r7um82g&view" class="launch-teaser">
+  <section class="header">
+    <nav>
+      <a href="MeteoHome.html"><img src="https://fv9-5.failiem.lv/down.php?i=c35dyk4ce&view"></a>
+      <div class="nav-links" id="navLinks">
+        <i class="fa fa-times" onclick="hideMenu()"></i>
+        <ul>
+          <li><a href="index.html">MĀJAS</a></li>
+          <li><a href="MeteoPar.html">PAR</a></li>
+          <li><a href="MeteoNoverojumuKarte_temperatura.html">NOVĒROJUMU KARTE</a></li>
+          <li><a href="MeteoSatelits_HRV.html">SATELĪTKARTE</a></li>
+          <li><a href="MeteoSalidzinajums.html">SALĪDZINĀJUMI</a></li>
+        </ul>
+      </div>
+      <i class="fa fa-bars" onclick="showMenu()"></i>
+    </nav>
+
+    <div class="text-box">
+      <h1>Meteo Latvia</h1>
+      <p>Hidrometeoroloģiskā informācija</p>
+      <a href="https://youtu.be/pfg8e0bWd7M" target="_blank" class="hero-btn">Uzzini precīzas laikas prognozes</a>
+    </div>
+  </section>
+
+  <section class="par">
+    <h1>Par mājaslapu</h1>
+    <p>Mājaslapā iespējams aplūkot</p>
+
+    <div class="row">
+      <div class="info-col">
+        <h3>Meteoroloģiskās kartes</h3>
+        <ul>
+          <li>Novērojumu stacijas</li>
+          <li>Meteoroloģiskais radars</li>
+          <li>Meteoroloģiskais satelīts</li>
+          <li>Zibens izlādes</li>
+          <li>Sinoptiskās prognozes</li>
+        </ul>
+      </div>
+      <div class="info-col">
+        <h3>Blogs</h3>
+        <p>Martina Bergšteina veidoti blogi, kuros apskatīti interesanti meteorloģiskie notikumi,
+          laika prognozes, kā arī citi ar meteoroloģiju saistīti temati.
+        </p>
+      </div>
+      <div class="info-col">
+        <h3>Galerija</h3>
+        <p>Martina Bergšteina personālā galerija ar dabas, meteoroloģisko parādību, kā arī astronomijas
+          fotogrāfijām, pilnā kvalitātē, bez maksas.
+        </p>
+      </div>
+    </div>
+  </section>
+
+  </div>
+  </section>
+
+  <section class="contact">
+    <h1>Populārākās sadaļas</h1>
+    <p>Mājslapas apmeklētāju biežāk apmeklētās mājaslapas sadaļas.</p>
+
+    <div class="row">
+      <div class="contact-col">
+        <img src="images/Sakumlapa.png">
+        <div class="layer">
+          <h3>Sākumlapa</h3>
         </div>
+      </div>
+      <div class="contact-col">
+        <img src="https://fv9-5.failiem.lv/down.php?i=s362aha64&view">
+        <div class="layer">
+          <h3>Novērojumu karte</h3>
+        </div>
+      </div>
+      <div class="contact-col">
+        <img src="https://fv9-4.failiem.lv/down.php?i=4aus75s86&view">
+        <div class="layer">
+          <h3>Satelītkarte</h3>
+        </div>
+      </div>
     </div>
-    <div id="demo">
-        <script>
-            // Set the date we're counting down to
-            var countDownDate = new Date("May 15, 2023 18:00:00").getTime();
+  </section>
 
-            // Update the count down every 1 second
-            var x = setInterval(function () {
 
-                // Get today's date and time
-                var now = new Date().getTime();
+  <section class="karte">
+    <h1>Interesantākās fotogrāfijas</h1>
+    <p>Pagājušās nedēļas, TOP3, interesantākās un skaistākās fotogrāfijas.</p>
 
-                // Find the distance between now and the count down date
-                var distance = countDownDate - now;
-
-                // Time calculations for days, hours, minutes and seconds
-                var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-                var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-                var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-                var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-
-                // Output the result in an element with id="demo"
-                document.getElementById("demo").innerHTML = days + " dienas <br>" + hours + " stundas <br>"
-                    + minutes + " minūtes <br>" + seconds + " sekundes <br>";
-            }
-                , 1000);
-        </script>
+    <div class="row">
+      <div class="facilities-col">
+        <img src="images/TOP3.jpg">
+        <h3>TOP3</h3>
+        <p>Inese Zeltiņa</p>
+      </div>
+      <div class="facilities-col">
+        <img src="images/TOP2.jpg">
+        <h3>TOP2</h3>
+        <p>Jānis Uzaris</p>
+      </div>
+      <div class="facilities-col">
+        <img src="images/TOP1.jpg">
+        <h3>TOP1</h3>
+        <p>Martins Bergšteins</p>
+      </div>
     </div>
+  </section>
+
+  <section class="reviews">
+    <h1>Ko saka lietotāji</h1>
+    <p>Mājaslapas "MeteoLatvia" apmeklētāju atsauksmes</p>
+
+    <div class="row">
+      <div class="reviews-col">
+        <img src="images/Inese.jpg">
+        <div>
+          <p>Fantastiska mājaslapa! Ērta pārskatāmība, kvalitatīvi dati un prognozes!
+            Ikdienā arvien biežāk sāku izmantot tieši šo mājaslapu, citu meteo mājaslapu vietā.
+          </p>
+          <h3>Inese Zeltiņa</h3>
+          <i class="fa fa-star"></i>
+          <i class="fa fa-star"></i>
+          <i class="fa fa-star"></i>
+          <i class="fa fa-star"></i>
+          <i class="fa fa-star-o"></i>
+        </div>
+      </div>
+      <div class="reviews-col">
+        <img src="images/Janis.jpg">
+        <div>
+          <p>Ļoti laba mājaslapa. Bieži izmantoju darba vajadzībām, jo darbā laikapstākļi ļoti
+            ietekmē darba procesu. Kvalitatīvas prognozes, operatīva informācija, kā arī bieži
+            izmantoju privātu saziņu, vēl detalizētākai informācijai.
+          </p>
+          <h3>Jānis Uzaris</h3>
+          <i class="fa fa-star"></i>
+          <i class="fa fa-star"></i>
+          <i class="fa fa-star"></i>
+          <i class="fa fa-star"></i>
+          <i class="fa fa-star-half-o"></i>
+        </div>
+      </div>
+    </div>
+
+  </section>
+
+  <section class="footer">
+    <h4>MeteoLatvia</h4>
+    <p></p>
+    <div class="icons">
+      <a href="https://twitter.com/MeteoLatvia">
+        <i class="fa fa-twitter"></i>
+      </a>
+      <a href="https://www.facebook.com/MetLatvia">
+        <i class="fa fa-facebook"></i>
+      </a>
+      <a href="https://www.instagram.com/meteo_latvia15/">
+        <i class="fa fa-instagram"></i>
+      </a>
+      <a href="https://youtube.com/@meteolatvia">
+        <i class="fa fa-youtube"></i>
+      </a>
+    </div>
+    <p><i class="fa fa-copyright"></i>MeteoLatvia 2023 <br>V5</p>
+  </section>
+
+
+
+
+  <script>
+
+    var navLinks = document.getElementById("navLinks");
+
+    function showMenu() {
+      navLinks.style.right = "0";
+    }
+
+    function hideMenu() {
+      navLinks.style.right = "-200px";
+    }
+
+  </script>
+
 </body>
 
 </html>
