--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h1>Error</h1>
             <p>Dienas, dienas, dienas...
             <p>
-                <img src="https://fv9-6.failiem.lv/down.php?i=wp65vcdk7&view" class="launch-teaser">
+                <img src="https://failiem.lv/down.php?i=w3r7um82g">
         </div>
     </div>
     <div id="demo">
