--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
             font-size: 24px;
             /* Adjust the font size as needed */
         }
+        
+        .teaser{
+            width: 50%;
+        }
     </style>
 </head>
 
@@ -33,7 +37,7 @@
             <h1>Error</h1>
             <p>Dienas, dienas, dienas...
             <p>
-                <img src="https://failiem.lv/down.php?i=w3r7um82g">
+                <img src="https://failiem.lv/down.php?i=w3r7um82g" class=teaser>
         </div>
     </div>
     <div id="demo">
