--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
         }
         
         .teaser{
-            width: 100%;
+           max-width: 100%;
+            height: auto;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            width: 75%;
         }
     </style>
 </head>
