--- a/MeteoPar.html
+++ b/MeteoPar.html
@@ -22,9 +22,17 @@
         <ul>
           <li><a href="index.html">MĀJAS</a></li>
           <li><a href="MeteoPar.html">PAR</a></li>
-          <li><a href="MeteoNoverojumuKarte_temperatura.html">NOVĒROJUMU KARTE</a></li>
-          <li><a href="MeteoSatelits_HRV.html">SATELĪTKARTE</a></li>
-          <li><a href="MeteoSalidzinajums.html">SALĪDZINĀJUMI</a></li>
+          <li>
+            <a href="MeteoNoverojumuKarte_temperatura.html">NOVĒROJUMU DATI</a>
+            <ul class="sub-menu">
+              <li><a href="MeteoNoverojumuKarte_temperatura.html">Novērojumu karte</a></li>
+              <li><a href="MeteoSatelits_HRV.html">Satelītattēli</a></li>
+              <li><a href="MeteoRadars.html">Nokrišņu radars</a></li>
+              <li><a href="MeteoZibenosana.html">Zibeņošana</a></li>
+            </ul>
+          </li>
+          <li><a href="MeteoNegaisi.html">NEGAISU PROGNOZE</a></li>
+          <li><a href="https://failiem.lv/contact@meteolatvia.com" target="_blank">GALERIJA</a></li>
         </ul>
       </div>
       <i class="fa fa-bars" onclick="showMenu()"></i>
@@ -40,7 +48,7 @@
           tad interese kļuva arvien lielāka, sāku pats mēģināt pētīt sinoptiskās kartes. Pēc pāris gadiem iegūstot pirmo nopietno viedtālruni uzņēmu video ar negaisu un tas bija
           brīdis, no kura meteoroloģisko karšu pētīšana, ekstrēmu laikapstākļu medīšana un sekošana šīs nozares aktualitātēm kļuva par manu ikdienu. Kopš 2021.gada 10.decembra,
           sāku darbu telekanālā TV3, kā laika ziņu moderators."</p>
-          <a href="" class="hero-btn red-btn">Izpēti plašāk</a>
+          <a href="https://izklaide.tv3.lv/tv-jaunumi/video-darbu-900-sekunzu-laika-zinas-sacis-14-gadus-vecais-jelgavnieks-martins/" target="_blank" class="hero-btn red-btn">Izpēti plašāk</a>
       </div>
       <div class="par-col">
         <img src="images/Martins2.png" alt="">
@@ -53,7 +61,7 @@
 
 
   <section class="footer">
-    <h4>Par mani</h4>
+    <h4>Martins Bergšteins - Meteo Latvia</h4>
     <p></p>
     <div class="icons">
       <a href="https://twitter.com/MeteoLatvia">
