--- a/MeteoNoverojumuKarte_nokrisnudaudzums.html
+++ b/MeteoNoverojumuKarte_nokrisnudaudzums.html
@@ -22,9 +22,17 @@
         <ul>
           <li><a href="index.html">MĀJAS</a></li>
           <li><a href="MeteoPar.html">PAR</a></li>
-          <li><a href="MeteoNoverojumuKarte_temperatura.html">NOVĒROJUMU KARTE</a></li>
-          <li><a href="MeteoSatelits_HRV.html">SATELĪTKARTE</a></li>
-          <li><a href="MeteoSalidzinajums.html">SALĪDZINĀJUMI</a></li>
+          <li>
+            <a href="MeteoNoverojumuKarte_temperatura.html">NOVĒROJUMU DATI</a>
+            <ul class="sub-menu">
+              <li><a href="MeteoNoverojumuKarte_temperatura.html">Novērojumu karte</a></li>
+              <li><a href="MeteoSatelits_HRV.html">Satelītattēli</a></li>
+              <li><a href="MeteoRadars.html">Nokrišņu radars</a></li>
+              <li><a href="MeteoZibenosana.html">Zibeņošana</a></li>
+            </ul>
+          </li>
+          <li><a href="MeteoNegaisi.html">NEGAISU PROGNOZE</a></li>
+          <li><a href="https://failiem.lv/contact@meteolatvia.com" target="_blank">GALERIJA</a></li>
         </ul>
       </div>
       <i class="fa fa-bars" onclick="showMenu()"></i>
@@ -50,10 +58,16 @@
     <embed type="text/html" src="LVGMC_kartes/karte_nokrisnudaudzums.html" class="LVGMC_karte">
   </section>
 
+  <section>
+    <div style="display: flex; justify-content: center;">
+      <embed type="text/html" src="LVGMC_kartes/tabula_nokrisnudaudzums.html" class="LVGMC_tabula" width="90%" height="1400px">
+    </div>
+  </section>
+
 
 
   <section class="footer">
-    <h4>Par mani</h4>
+    <h4>Martins Bergšteins - Meteo Latvia</h4>
     <p></p>
     <div class="icons">
       <a href="https://twitter.com/MeteoLatvia">
