--- a/MeteoSatelits_FogCheck.html
+++ b/MeteoSatelits_FogCheck.html
@@ -22,14 +22,22 @@
         <ul>
           <li><a href="index.html">MĀJAS</a></li>
           <li><a href="MeteoPar.html">PAR</a></li>
-          <li><a href="MeteoNoverojumuKarte_temperatura.html">NOVĒROJUMU KARTE</a></li>
-          <li><a href="MeteoSatelits_HRV.html">SATELĪTKARTE</a></li>
-          <li><a href="MeteoSalidzinajums.html">SALĪDZINĀJUMI</a></li>
+          <li>
+            <a href="MeteoNoverojumuKarte_temperatura.html">NOVĒROJUMU DATI</a>
+            <ul class="sub-menu">
+              <li><a href="MeteoNoverojumuKarte_temperatura.html">Novērojumu karte</a></li>
+              <li><a href="MeteoSatelits_HRV.html">Satelītattēli</a></li>
+              <li><a href="MeteoRadars.html">Nokrišņu radars</a></li>
+              <li><a href="MeteoZibenosana.html">Zibeņošana</a></li>
+            </ul>
+          </li>
+          <li><a href="MeteoNegaisi.html">NEGAISU PROGNOZE</a></li>
+          <li><a href="https://failiem.lv/contact@meteolatvia.com" target="_blank">GALERIJA</a></li>
         </ul>
       </div>
       <i class="fa fa-bars" onclick="showMenu()"></i>
     </nav>
-    <h1>Novērojumu karte</h1>
+    <h1>Satelītattēli</h1>
   </section>
 
 
@@ -49,7 +57,7 @@
 
 
   <section class="footer">
-    <h4>Par mani</h4>
+    <h4>Martins Bergšteins - Meteo Latvia</h4>
     <p></p>
     <div class="icons">
       <a href="https://twitter.com/MeteoLatvia">
