--- a/LVGMC_kartes/karte_test.html
+++ b/LVGMC_kartes/karte_test.html
@@ -4,27 +4,19 @@
 <head>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script src='https://code.jquery.com/jquery-3.2.1.min.js'></script>
+
     <base target="_top">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>LVĢMC_sniega_segas_biezums</title>
+    <title>LVĢMC DATI</title>
 
     <link rel="shortcut icon" type="image/x-icon" href="docs/images/favicon.ico" />
+
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
         integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI=" crossorigin="" />
     <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
         integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM=" crossorigin=""></script>
-    <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
-    <script src='https://api.mapbox.com/mapbox.js/v3.3.1/mapbox.js'></script>
-    <link href='https://api.mapbox.com/mapbox.js/v3.3.1/mapbox.css' rel='stylesheet' />
-    <script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/Leaflet.fullscreen.min.js'></script>
-    <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/leaflet.fullscreen.css'
-        rel='stylesheet' />
-    <script src="https://unpkg.com/leaflet-simple-map-screenshoter"></script>
-    <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
-    <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
-
 
     <style>
         html,
@@ -50,32 +42,10 @@
             height: 28px;
             border-radius: 5px;
             border-color: black;
-            text-shadow:
-                -0.6px -0.6px 0 #ffffff,
-                0 -0.6px 0 #ffffff,
-                0.6px -0.6px 0 #ffffff,
-                0.6px 0 0 #ffffff,
-                0.6px 0.6px 0 #ffffff,
-                0 0.6px 0 #ffffff,
-                -0.6px 0.6px 0 #ffffff,
-                -0.6px 0 0 #ffffff;
-            border-width: 0.5px;
+            text-shadow: 0 0 2px #ffffff, 0 0 2px #ffffff, 0 0 2px #ffffff, 0 0 2px #ffffff, 0 0 2px #ffffff, 0 0 2px #ffffff;
+            border-width: 1px;
             border-style: solid;
             text-align: center;
-        }
-
-        .legend {
-            background-color: rgba(255, 255, 255, 0.493);
-            padding: 10px;
-            border-radius: 5px;
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
-        }
-
-        .legend i {
-            display: inline-block;
-            width: 10px;
-            height: 10px;
-            margin-right: 10px;
         }
     </style>
 </head>
@@ -101,73 +71,28 @@
         var datlaiks = date + " " + stundas
         console.log('tagad', datlaiks);
         console.log('pirms', datlaiksminus);
-
-
-
-
-        //load basemap
         var map = L.map('map').setView([56.74, 24.65], 7);
         var tiles = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
             maxZoom: 19,
             attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
         }).addTo(map);
 
-        //load other basemaps
-        var Stamen_Terrain = L.tileLayer('https://stamen-tiles-{s}.a.ssl.fastly.net/terrain/{z}/{x}/{y}{r}.{ext}', {
-            attribution: 'Map tiles by <a href="http://stamen.com">Stamen Design</a>, <a href="http://creativecommons.org/licenses/by/3.0">CC BY 3.0</a> &mdash; Map data &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',
-            subdomains: 'abcd',
-            minZoom: 0,
-            maxZoom: 18,
-            ext: 'png'
+        //add map scale
+        L.control.scale().addTo(map)
+
+        //add fulscreen
+
+
+
+
+
+        const baseballIcon = L.icon({
+            iconUrl: 'baseball-marker.png',
+            iconSize: [32, 37],
+            iconAnchor: [16, 37],
+            popupAnchor: [0, -28]
         });
-
-        var CartoDB_Positron = L.tileLayer('https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png', {
-            attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors &copy; <a href="https://carto.com/attributions">CARTO</a>',
-            subdomains: 'abcd',
-            maxZoom: 20,
-            ext: 'png'
-        });
-
-        var CartoDB_DarkMatter = L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
-            attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors &copy; <a href="https://carto.com/attributions">CARTO</a>',
-            subdomains: 'abcd',
-            maxZoom: 20,
-            ext: 'png'
-        });
-
-        var MeteoLatviaMapboxDark = L.tileLayer('https://api.mapbox.com/styles/v1/meteolatvia/clgag3w0g002c01pegs0qihfg/tiles/256/{z}/{x}/{y}@2x?access_token=pk.eyJ1IjoibWV0ZW9sYXR2aWEiLCJhIjoiY2xjcWF3ajRkMDQ0NDNucDE4aTdkZ3h2NSJ9.L0yigObs_66n45KR3oLfUQ', {
-            subdomains: 'abcd',
-            maxZoom: 20,
-            attribution: '© <a href="https://www.mapbox.com/contribute/">Mapbox</a> © <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
-        });
-
-
-        //add layer control
-        var baseMaps = {
-            'OSM': tiles,
-            'Reljefs': Stamen_Terrain,
-            'Gaiša karte': CartoDB_Positron,
-            'Tumša karte': MeteoLatviaMapboxDark
-        }
-
-        L.control.layers(baseMaps).addTo(map);
-
-
-        //fulscreen
-        L.control.fullscreen().addTo(map);
-
-
-        //add screenshotter
-        L.simpleMapScreenshoter().addTo(map)
-
-
-        //add geocoding
-        L.Control.geocoder().addTo(map);
-
-
         //izveidot geoJson
-
-
         var myLayer = L.geoJSON().addTo(map);
         var gj = {
             "name": "MyFeatureType",
@@ -186,11 +111,11 @@
                 response2.forEach(function (tabledata2) {
                     console.log(tabledata2.laiks)
                     if (tabledata2.laiks === datlaiks) {
-                        myObj[tabledata2.stacijas_kods] = tabledata2.sniega_segas_biezums
+                        myObj[tabledata2.stacijas_kods] = tabledata2.temperatura
                     }
 
                     else if (tabledata2.laiks === datlaiksminus) {
-                        myObj[tabledata2.stacijas_kods] = tabledata2.sniega_segas_biezums
+                        myObj[tabledata2.stacijas_kods] = tabledata2.temperatura
                     }
 
                 })
@@ -212,10 +137,7 @@
                             var temp = myObj[atslega]
                             //console.log(temp)
                             geojsonFeature = {
-                                "type": "Feature", "geometry": {
-                                    "type": "Point", "coordinates": [parseFloat(tabledata.lon),
-                                    parseFloat(tabledata.lat)]
-                                },
+                                "type": "Feature", "geometry": { "type": "Point", "coordinates": [parseFloat(tabledata.lon), parseFloat(tabledata.lat)] },
                                 "properties": { "kods": tabledata.kods, "temperatura": temp }
                             }
                             /*gj.features.push(geojsonFeature);
@@ -225,11 +147,11 @@
 
 
                             value = temp;
-                            const numbers = [0, 0.5, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 12, 14, 16, 18, 20, 23, 26, 29, 32, 35, 40, 45, 50, 55, 60, 65, 70, 75, 80, 90, 100, 150];
-                            const colours = ['#ffffff', '#c5c5c5', '#adadad', '#7a8384', '#47a9b8', '#04dbfb', '#00abff', '#0080ff', '#0050ee', '#002fc7', '#000b9c', '#18009a', '#3e00aa', '#6400ba', '#9a00d2', '#c800e7', '#ec00f7', '#ff51ff', '#ff91ff', '#ffbaf7', '#ffa7bd', '#ff9393', '#ff6364', '#ff4b4c', '#ff2e2e', '#d20000', '#ae0000', '#520000', '#520000', '#520000', '#520000', '#520000', '#520000', '#520000'];
+                            const numbers = [-50, -49, -48, -47, -46, -45, -44, -43, -42, -41, -40, -39, -38, -37, -36, -35, -34, -33, -32, -31, -30, -29, -28, -27, -26, -25, -24, -23, -22, -21, -20, -19, -18, -17, -16, -15, -14, -13, -12, -11, -10, -9, -8, -7, -6, -5, -4, -3, -2, -1, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50];
+                            const colours = ['#ffdbff', '#ffd3ff', '#ffcbff', '#ffc1ff', '#ffb7ff', '#ffacff', '#ffa1ff', '#ff97ff', '#ff8cff', '#ff83ff', '#ff7aff', '#ff71ff', '#ff68ff', '#ff5fff', '#ff55ff', '#ff46f8', '#ff3dff', '#ff34ff', '#ff2cff', '#ff20ff', '#ff02ff', '#ef00f7', '#d608e9', '#bb14d9', '#9b1ac7', '#7d1cb6', '#5f1ba5', '#431796', '#2a118a', '#140982', '#00007f', '#000087', '#000095', '#0000ac', 'v0000c8', '#0100e2', '#0200f8', '#0012ff', '#002cff', '#003fff', '#0050ff', '#0060ff', '#0071ff', '#0080ff', '#0091ff', '#00a4ff', '#00b8ff', '#00ccff', '#00e0ff', '#00f0ff', '#00fdff', '#00ffeb', '#00ffcf', '#00ffac', '#00ff82', '#00ff51', '#00ff09', '#4dff00', '#78ff00', '#9cff00', '#bfff00', '#deff00', '#f4ff02', '#fffb00', '#ffed00', '#ffdb00', '#ffc700', '#ffb200', '#ff9d00', '#ff8a00', '#ff7a00', '#ff6c00', '#ff5d00', '#ff4f00', '#ff4000', '#ff2f00', '#ff1900', '#fc0000', '#ec0000', '#d70000', '#be0000', '#a80000', '#920000', '#800000', '#720000', '#640000', '#560000', '#4b0000', '#410000', '#3b0000', '#370000', '#380107', '#3e0314', '#470626', '#530739', '#5f084d', '#6c0662', '#770472', '#7e007e', '#7e007e'];
                             const index = numbers.findIndex(e => e > value)
                             console.log(colours[index]);
-                            var content = `<div style="background:${colours[index]}">${temp} cm</div>`;
+                            var content = `<div style="background:${colours[index]}">${temp}°C</div>`;
                             var myIcon = L.divIcon({ html: content, className: 'marker' });
                             var marker = L.marker([parseFloat(tabledata.lat), parseFloat(tabledata.lon)], { icon: myIcon });
                             marker.addTo(map);
@@ -239,7 +161,6 @@
             })
 
         }
-
 
         setTimeout(sazimet, 1000);
         console.log(gj)
