--- a/MeteoNegaisi.html
+++ b/MeteoNegaisi.html
@@ -58,7 +58,7 @@
           <li><a href="index.html">MĀJAS</a></li>
           <li><a href="MeteoPar.html">PAR</a></li>
           <li>
-            <a href="MeteoNoverojumuKarte_temperatura.html">NOVĒROJUMU DATI</a>
+            <a href="">NOVĒROJUMU DATI</a>
             <ul class="sub-menu">
               <li><a href="MeteoNoverojumuKarte_temperatura.html">Novērojumu karte</a></li>
               <li><a href="MeteoSatelits_HRV.html">Satelītattēli</a></li>
@@ -66,7 +66,13 @@
               <li><a href="MeteoZibenosana.html">Zibeņošana</a></li>
             </ul>
           </li>
-          <li><a href="MeteoNegaisi.html">NEGAISU PROGNOZE</a></li>
+          <li>
+            <a href="">PROGNOZES</a>
+            <ul class="sub-menu">
+              <li><a href="MeteoPrognoze.html">Laika prognoze</a></li>
+              <li><a href="MeteoNegaisi.html">Negaisu prognoze</a></li>
+            </ul>
+          </li>
           <li><a href="https://failiem.lv/contact@meteolatvia.com" target="_blank">GALERIJA</a></li>
         </ul>
       </div>
@@ -76,7 +82,8 @@
   </section>
 
   <section class="MeteoLatvia_StormMap">
-    <img src="https://fv1-7.failiem.lv/down.php?i=hfjbmba5e&view">
+    <img src="https://fv9-1.failiem.lv/down.php?i=w6qabm7sm&view">
+    <img src="https://fv9-6.failiem.lv/down.php?i=tyxmpbv5d&view">
 
     <button class="collapsible">Prognozes izklāsts</button>
     <div class="thunderstorm-outlook">
