--- a/index.html
+++ b/index.html
@@ -31,7 +31,13 @@
               <li><a href="MeteoZibenosana.html">Zibeņošana</a></li>
             </ul>
           </li>
-          <li><a href="MeteoNegaisi.html">NEGAISU PROGNOZE</a></li>
+          <li>
+            <a href="">PROGNOZES</a>
+            <ul class="sub-menu">
+              <li><a href="MeteoPrognoze.html">Laika prognoze</a></li>
+              <li><a href="MeteoNegaisi.html">Negaisu prognoze</a></li>
+            </ul>
+          </li>
           <li><a href="https://failiem.lv/contact@meteolatvia.com" target="_blank">GALERIJA</a></li>
         </ul>
       </div>
