--- a/MeteoGalerija.html
+++ b/MeteoGalerija.html
@@ -17,28 +17,36 @@
 </head>
 
 <body>
-    <section class="sub-header-negaisi">
-        <nav>
+    <body>
+        <section class="header">
+          <nav>
             <a href="MeteoHome.html"><img src="https://fv9-5.failiem.lv/down.php?i=c35dyk4ce&view"></a>
             <div class="nav-links" id="navLinks">
-                <i class="fa fa-times" onclick="hideMenu()"></i>
-                <ul>
-                    <li><a href="index.html">MĀJAS</a></li>
-                    <li><a href="MeteoPar.html">PAR</a></li>
-                    <li>
-                        <a href="MeteoNoverojumuKarte_temperatura.html">NOVĒROJUMU DATI</a>
-                        <ul class="sub-menu">
-                            <li><a href="MeteoNoverojumuKarte_temperatura.html">Novērojumu karte</a></li>
-                            <li><a href="MeteoSatelits_HRV.html">Satelītattēli</a></li>
-                            <li><a href="MeteoRadars.html">Nokrišņu radars</a></li>
-                            <li><a href="MeteoZibenosana.html">Zibeņošana</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="MeteoNegaisi.html">NEGAISU PROGNOZE</a></li>
-                </ul>
+              <i class="fa fa-times" onclick="hideMenu()"></i>
+              <ul>
+                <li><a href="index.html">MĀJAS</a></li>
+                <li><a href="MeteoPar.html">PAR</a></li>
+                <li>
+                  <a href="">NOVĒROJUMU DATI</a>
+                  <ul class="sub-menu">
+                    <li><a href="MeteoNoverojumuKarte_temperatura.html">Novērojumu karte</a></li>
+                    <li><a href="MeteoSatelits_HRV.html">Satelītattēli</a></li>
+                    <li><a href="MeteoRadars.html">Nokrišņu radars</a></li>
+                    <li><a href="MeteoZibenosana.html">Zibeņošana</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">PROGNOZES</a>
+                  <ul class="sub-menu">
+                    <li><a href="MeteoPrognoze.html">Laika prognoze</a></li>
+                    <li><a href="MeteoNegaisi.html">Negaisu prognoze</a></li>
+                  </ul>
+                </li>
+                <li><a href="https://failiem.lv/contact@meteolatvia.com" target="_blank">GALERIJA</a></li>
+              </ul>
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
-        </nav>
+          </nav>
         <h1>Atjauninājumi</h1>
     </section>
     <section class="par">
