--- a/MeteoNoverojumuKarte_sniegasegasbiezums.html
+++ b/MeteoNoverojumuKarte_sniegasegasbiezums.html
@@ -23,7 +23,7 @@
           <li><a href="index.html">MĀJAS</a></li>
           <li><a href="MeteoPar.html">PAR</a></li>
           <li>
-            <a href="MeteoNoverojumuKarte_temperatura.html">NOVĒROJUMU DATI</a>
+            <a href="">NOVĒROJUMU DATI</a>
             <ul class="sub-menu">
               <li><a href="MeteoNoverojumuKarte_temperatura.html">Novērojumu karte</a></li>
               <li><a href="MeteoSatelits_HRV.html">Satelītattēli</a></li>
@@ -31,7 +31,13 @@
               <li><a href="MeteoZibenosana.html">Zibeņošana</a></li>
             </ul>
           </li>
-          <li><a href="MeteoNegaisi.html">NEGAISU PROGNOZE</a></li>
+          <li>
+            <a href="">PROGNOZES</a>
+            <ul class="sub-menu">
+              <li><a href="MeteoPrognoze.html">Laika prognoze</a></li>
+              <li><a href="MeteoNegaisi.html">Negaisu prognoze</a></li>
+            </ul>
+          </li>
           <li><a href="https://failiem.lv/contact@meteolatvia.com" target="_blank">GALERIJA</a></li>
         </ul>
       </div>
