--- a/MeteoNegaisi.html
+++ b/MeteoNegaisi.html
@@ -88,38 +88,17 @@
     <button class="collapsible">Prognozes izklāsts</button>
     <div class="thunderstorm-outlook">
       <p>Bīstamu negaisu prognoze<br>
-        Derīga: no 10.05.2023. 21:00 līdz 11.05.2023. 21:00<br>
-        Izplatīta: 10.05.2023. 20:35<br><br><br>
+        Derīga: no 12.06.2023. 21:00 līdz 12.06.2023. 21:00<br>
+        Izplatīta: 12.06.2023. 21:00<br><br><br>
 
 
         SITUĀCIJAS APRAKSTS<br><br><br>
-        Virs mūsu reģiona darbojas pazemināta spiediena apgabals, kas mūsu reģionā no dienvidaustrumiem ienes ļoti
-        karstas un ļoti mitras gaisa masas.
-        Pēdējo dienu laikā daudzviet gaisa temperatūra jau pakāpusies virs +30°C...+33°C atzīmes, kā arī realatīvais
-        gaisa mitrums ir ļoti augsts.<br><br><br>
+        Virs mūsu reģiona dominē plaša un spēcīga anticiklona centrālā daļa, kas nosaka to, ka laiks mūsu reģionā ir sauss un saulains. Mūsu apkārtnē nav novērojami negaisi. 
+        <br><br><br>
 
 
         DISKUSIJA<br><br><br>
-        Iepriekš minētais pazemināta spiediena apgabals no Melnās jūras reģiona, pie mums ienesis ļoti karstu un mitru
-        gaisa masu. Theta-E vertības 10.maija dienas laikā
-        tiek prognozētas ap 55-60, kas norāda uz ekstremālu gaisa masas mitrumu. Jau agrās rīta stundās CAPE vērtības
-        būs ap 1000-1500 J/kg, taču dienas laikā tās strauji
-        palielināsies, un ap 12:00-15:00, centrālajos un austrumu rajonos būs ap 2500-3000 J/kg. Īpaši interesanti
-        prognozēs izskatās laika posms ap 17:00-18:00, kad
-        Zemgales un Sēlijas apkārtnē būs neliels reģions ar CAPE vērtībām līdz 4000 J/kg. Konvektīvā inicializāija tiek
-        prognozēta ap 13:00-14:00, kad frontāls veidojums
-        virzīsies no dienvidrietumiem uz ziemeļaustrumiem. Negaisu cikla sākumā, tie strauji pāraugs ļoti spēcīgās
-        negaisu šūnās. Papildus tam - wind shear vērtības būs ap 15-20 m/s, kas
-        veidos ideālus apstākļus negaisa mākoņu rotācijai. Tas dod iespēju, ka negaisi strauji pāraugs superšūnas tipa
-        negaisos. Šādā gadījumā tas īpaši palielina virpuļviesuļa
-        un milzu krusas risku, kas šajā gadījumā būs reģionā no Šauļiem un Paņevežas cauri Bauskai uz Vidzemes
-        dienvdiem. Vēlāk pēcpusdienā un pievakarē (ap 15:00-18:00), negaisi
-        sāks aktīvi organizēties grupās un linēarās sistēmās. To virzības ceļā uz ziemeļaustrumiem, būs plašs apgabals
-        ar īpaši augstām CAPE vērtībām ap 2500-3000 J/kg, kas palīdzēs
-        negaisiem vēl vairāk organizēties. Vēlāk vakarā (ap 20:00-23:00) negaisi jau būs izveidojuši milzu konvektīvo
-        sistēmu un strauji virzīsies uz ziemeļaustrumiem. Šajā brīdī
-        pazudīs virpuļviesuļa risks, taču palielināsies risks uz vētrainām vēja brāzmām un ļoti spēcīgām lietusgāzēm, kā
-        arī ļoti aktīvu zibeņošanu.
+     Iepriekš minēto iemeslu dēļ, mūsu reģionā negaisi nav novērojami. Bīstami negaisi netiek prognozēti un kopējā pērkona negaisu iespējamība visā valstī ir zem 1%.
       </p>
     </div>
 
