--- a/MeteoNegaisi.html
+++ b/MeteoNegaisi.html
@@ -82,18 +82,18 @@
   </section>
 
   <section class="MeteoLatvia_StormMap">
-    <img src="https://fv9-1.failiem.lv/down.php?i=w6qabm7sm&view">
-    <img src="https://fv9-6.failiem.lv/down.php?i=tyxmpbv5d&view">
+    <img src="https://fv9-2.failiem.lv/down.php?i=vzv6vnqkj&view">
+    <img src="https://fv9-6.failiem.lv/down.php?i=q8m3gk4gb&view">
 
     <button class="collapsible">Prognozes izklāsts</button>
     <div class="thunderstorm-outlook">
       <p>Bīstamu negaisu prognoze<br>
-        Derīga: no 12.06.2023. 21:00 līdz 12.06.2023. 21:00<br>
-        Izplatīta: 12.06.2023. 21:00<br><br><br>
+        Derīga: no 13.06.2023. 23:59 līdz 14.06.2023. 23:59<br>
+        Izplatīta: 13.06.2023. 18:00<br><br><br>
 
 
         SITUĀCIJAS APRAKSTS<br><br><br>
-        Virs mūsu reģiona dominē plaša un spēcīga anticiklona centrālā daļa, kas nosaka to, ka laiks mūsu reģionā ir sauss un saulains. Mūsu apkārtnē nav novērojami negaisi. 
+        Virs mūsu reģiona dominē plaša un spēcīga anticiklona centrālā daļa, kas nosaka to, ka laiks mūsu reģionā ir sauss un saulains. Mūsu apkārtnē nav novērojami pat atsevišķi gubu mākoņi, nemaz nerunājot par negaisiem.
         <br><br><br>
 
 
